[gd_scene load_steps=5 format=2]

[ext_resource path="res://kenney_platformercharacters/PNG/Zombie/zombie_tilesheet.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.24621

[sub_resource type="CircleShape2D" id=2]
radius = 168.146

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ZombieTilesheet" type="Sprite" parent="."]
position = Vector2( -5.96046e-08, -11 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )
hframes = 9
vframes = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 1 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
